# minigui4

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  clean.bat  vs2013_build.bat  vs2013_rebuild.bat  vs2014_build.bat  vs2014_rebuild.bat
fastlz/: CMakeLists.txt  fastlz.c
minigui/: CMakeLists.txt  application.h  events.h  graphics.h  resource.h  types.h  window.h
miniguide/: CMakeLists.txt  main.cpp
